rectification du nom de l'application sur le slogan de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <h1>ClaviBoost</h1>
         <h2>L'application pour écrire plus vite !</h2>
-        <h3>AzerType est une application en ligne pour apprendre à taper plus vite au clavier :)</h3>
+        <h3>ClaviBoost est une application en ligne pour apprendre à taper plus vite au clavier :)</h3>
     </header>
     <img src="images/clavier1.jpg" alt="">
     <!-- MAIN -->
